--- a/app/src/main/res/layout/content_list_activtiy.xml
+++ b/app/src/main/res/layout/content_list_activtiy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ListActivtiy"
+    tools:context=".ListActivity"
     tools:showIn="@layout/activity_list">
 
     <TextView
@@ -19,5 +19,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/facts_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
