--- a/app/src/main/res/layout/fact_holder.xml
+++ b/app/src/main/res/layout/fact_holder.xml
@@ -11,34 +11,41 @@
     </data>
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{fact.title}"
             tools:text="Title" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignStart="@+id/image"
                 android:text="@{fact.description}"
                 tools:text="Sub Title" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:setImage="@{fact.imageHref}" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:maxHeight="50dp"
+                android:maxWidth="50dp"
+                android:setImage="@{fact.imageHref}"
+                tools:src="@mipmap/ic_launcher" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
