--- a/app/src/main/res/layout/fact_holder.xml
+++ b/app/src/main/res/layout/fact_holder.xml
@@ -49,12 +49,11 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/title"
                 android:adjustViewBounds="true"
-                android:maxWidth="125dp"
                 android:setImage="@{fact.imageHref}"
                 tools:src="@mipmap/ic_launcher_round" />
 
