--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".facts_list_module.FactsListActivity">
+    tools:context=".view.FactsListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
